--- a/style.css
+++ b/style.css
@@ -3,4 +3,20 @@
     margin: 0;
     padding: 0;
 }
- 
+ html{
+    height: 100%;
+ }
+body{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.playArea{
+    background-color: red;
+    margin: auto;
+}
+
+/*width: 50px;
+height: 50px;*/
